--- a/templates/index.html
+++ b/templates/index.html
@@ -8,12 +8,11 @@
 </head>
 <body style="background-color:white;">
 
-<h1>Hora:</h1><h1 id="sensor4">--</h1>
-<h1>Minutos:</h1><h1 id="sensor5">--</h1>
-<h1>Segundos:</h1><h1 id="sensor6">--</h1>
 <div align="center">
 
 <h1>Monitoreo de Sensores</h1>
+<img src="/static/images/ass.jpg" alt="user" width="300" height="300">
+
 
 <h1>Sensor1:</h1><h1 id="sensor1">---</h1>
 
